--- a/src/features/ToolsSection/ToolsSection.module.css
+++ b/src/features/ToolsSection/ToolsSection.module.css
@@ -1,7 +1,7 @@
 .section {
   padding: 5rem 0;
-  background-color: rgba(0, 4, 31, 0.5);
-  backdrop-filter: blur(5px);
+  background-color: var(--color-background); /* Fundo sólido preto */
+  backdrop-filter: blur(5px); /* Mantém o efeito de blur se houver sobreposição */
 }
 
 .header {
@@ -33,15 +33,15 @@
   .section {
     padding: 3rem 0;
   }
-  
+
   .title {
     font-size: 2rem;
   }
-  
+
   .description {
     font-size: 1rem;
   }
-  
+
   .cardsGrid {
     gap: 1rem;
   }
