--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,4 @@
-/* Adicione a importação da fonte Rethink Sans.
-   Se a fonte não estiver instalada localmente,
-   você precisará importá-la de uma fonte externa como o Google Fonts.
-   Exemplo:
-   @import url('https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;700&display=swap');
-*/
+@import url('https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;700&display=swap');
 
 :root {
   /* Cores */
@@ -11,7 +6,7 @@
   --color-background: #00020F;
   --color-surface-1: #00041F;
   --color-text-white: #FFFFFF;
-  --color-text-gray: #C9CDD8; /* Cor ajustada para facilitar a leitura */
+  --color-text-gray: #C9CDD8;
     
   /* Tipografia */
   --font-family-sans: 'Rethink Sans', sans-serif;
@@ -26,17 +21,11 @@
 
 html, body, #root {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 body {
-  /* Adicionando a imagem de fundo aqui */
-  background-image: url('./assets/images/hero-bg.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed; /* Isso faz com que o fundo não role com a página */
-  
+  /* Fundo do body agora é preto sólido */
   background-color: var(--color-background);
   color: var(--color-text-white);
   font-family: var(--font-family-sans);
